# PrettierMaps

./: .gitignore  .pre-commit-config.yaml  404.html  LICENSE  Makefile  README.md  amenity_bank_Glasgow_1200_point.gpkg  amenity_bank_Glasgow_1200_polygon.gpkg  index.html  main.py  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements-test.txt  symbology-style.db
.devcontainer/: Dockerfile.test  dockerfile.test
.github/workflows/: deploy-docs.yml  deploy-plugin.yml
.gitlab/ci/: .gitlab-ci.yml  docs.yml  lint.yml
.gitlab/issue_templates/: Bug  Bug.md  Documentation.md  Feature.md  Refactoring.md  skill_issue_template.md
.gitlab/merge_request_templates/: Bug.md  Feature.md  Refactoring.md
code/: index.html
docs/: code.md  index.md  tutorial.md
map_genie/: __init__.py  metadata.txt  plugin.py
map_genie/ui/: __init__.py  plugin.py
prettier_maps/: __init__.py  interfaces.py  metadata.txt  plugin.py
prettier_maps/assets/: info_button.css
prettier_maps/config/: layers.py  paths.py
prettier_maps/core/: __init__.py  layers.py  main.py  quick_osm_utils.py  save_osm_layer.py  saving.py  style_osm_layer.py  utils.py
prettier_maps/ui/: __init__.py  dialog.py
search/: search_index.json
stylesheets/: extra.css
temp/: OpenMapTiles_layers.json
tests/core/: test_layers.py
tutorial/: index.html
