[project]
name = "prettier_maps"
version = "0.1.0"
description="Style Maps Easily in GQIS"
requires-python = ">=3.12"
dependencies = [
    "pyqt5>=5.15.11",
]
authors = [
    {name = "Matthew McKee"},
]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.1",
    "isort>=5.13.2",
]
test = [
    "hypothesis>=6.119.4",
    "pytest-only>=2.1.2",
    "pytest>=8.3.3",
    "pytest-randomly>=3.16.0",
    "pytest-xdist>=3.6.1",
    "setuptools"
]
docs = [
    "mkdocs-material>=9.5.46",
    "mkdocs>=1.6.1",
]


[tool.isort]
profile = "black"

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

line-length = 88
indent-width = 4

target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "I", "N", "UP", "RUF", "PERF", "ERA", "PTH"]
ignore = ["D203", "D213", "RUF005", "N999", "N802"]

fixable = ["ALL"]
unfixable = []

dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
disable_error_code = ["call-arg", "no-untyped-def", "unused-ignore"]
disallow_untyped_defs = false
disallow_untyped_decorators = false
ignore_missing_imports = true


