[project]
name = "prettier_maps"
version = "0.1.0"
description="Style Maps Easily in GQIS"
requires-python = ">=3.9"
dependencies = [
    "pyqt5",
    "setuptools",
]
authors = [
    {name = "Matthew McKee"},
]

[dependency-groups]
dev = [
    "ruff",
    "mypy",
    "pre-commit",
]
test = [
    "hypothesis",
    "pytest-only",
    "pytest",
    "pytest-randomly",
    "pytest-xdist",
]
docs = [
    "mkdocs-material",
    "mkdocs",
]

[tool.qgis-plugin-ci]
plugin_path = "prettier_maps"
github_organization_slug = "PrettierMaps"
project_slug = "PrettierMaps"

[tool.setuptools]
packages = { find = { where = ["prettier_maps"] } }

[tool.isort]
profile = "black"

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

line-length = 88
indent-width = 4

target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "I", "N", "UP", "RUF", "PERF", "ERA", "PTH"]
ignore = ["D203", "D213", "RUF005", "N999", "N802", "UP007"]

fixable = ["ALL"]
unfixable = []

dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
disable_error_code = ["call-arg", "no-untyped-def", "unused-ignore"]
disallow_untyped_defs = false
disallow_untyped_decorators = false
ignore_missing_imports = true


