[project]
name = "prettier_maps"
version = "1.4.2"
description = "Style Maps Easily in GQIS"
requires-python = ">=3.9"
dependencies = ["pyqt5", "setuptools"]
authors = [{ name = "Matthew McKee" }]

[dependency-groups]
dev = ["ruff>=0.9.1", "mypy>=1.14.1", "pre-commit>=4.0.1", "tbump"]
test = [
    "hypothesis>=6.123.3",
    "pytest-only>=2.1.2",
    "pytest>=8.3.4",
    "pytest-randomly>=3.16.0",
    "pytest-xdist>=3.6.1",
]
docs = [
    "mkdocs-material>=9.5.49",
    "mkdocs>=1.6.1",
    "mkdocs-mermaid2-plugin>=1.2.1",
]

[tool.qgis-plugin-ci]
plugin_path = "prettier_maps"
github_organization_slug = "PrettierMaps"
project_slug = "PrettierMaps"

[tool.setuptools]
packages = { find = { where = ["prettier_maps"] } }

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

line-length = 88
indent-width = 4

target-version = "py39"

[tool.ruff.lint]
select = ["E", "W", "I", "N", "UP", "RUF", "PERF", "ERA", "PTH"]
ignore = ["D203", "D213", "RUF005", "N999", "N802", "UP007", "UP006", "UP035"]

fixable = ["ALL"]
unfixable = []

dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
disable_error_code = ["call-arg", "no-untyped-def", "unused-ignore"]
disallow_untyped_defs = false
disallow_untyped_decorators = false
ignore_missing_imports = true

[tool.coverage.report]
exclude_also = [
    "if self\\.debug",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
    "if TYPE_CHECKING:",
    "@overload",
]
ignore_errors = true

[tool.coverage.run]
omit = ["prettier_maps/ui/**", "prettier_maps/plugin.py"]


[tool.tbump]

[[tool.tbump.file]]
src = "README.md"

[[tool.tbump.file]]
src = "pyproject.toml"

[[tool.tbump.file]]
src = "prettier_maps/metadata.txt"

[[tool.tbump.file]]
src = "prettier_maps/__init__.py"

[[tool.tbump.file]]
src = "docs/index.md"

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "{new_version}"

[tool.tbump.version]
current = "1.4.2"
regex = '''
  (?P<major>\d+)
  \.
  (?P<minor>\d+)
  \.
  (?P<patch>\d+)
  '''
